--- a/src/styles/themes/modifiers.css
+++ b/src/styles/themes/modifiers.css
@@ -1265,7 +1265,7 @@ font-size: 0.9rem !important;
     text-transform: uppercase;
     font-weight: 700 !important;
     letter-spacing: 2px;
-    text-shadow: -1px 0 0 rgba(255, 0, 0, 0.45), 1px 0 0 rgba(0, 255, 255, 0.45);
+    text-shadow: -2px 0 0 rgba(255, 0, 80, 0.5), 2px 0 0 rgba(0, 200, 255, 0.5);
 }
 
 [data-theme='20XX'] .option-button:hover,
